Alterando via add interativo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
-<h1>Projeto do Anderson Galeote</h1>
+<h1>Projeto do Anderson Galeote, alterando</h1>
+<p>Novo trecho de texto de teste para testar o modo interativo!</p>
 </body>
 </html>
