Colocando mais um item, agora com elemento DIV

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
 <h1>Projeto do Anderson Galeote, alterando</h1>
 <p>Novo trecho de texto de teste para testar o modo interativo!</p>
+<div>Incluindo novo elemento na pagina com uma DIV</div>
 </body>
 </html>
